--- a/04-age-calculator/style.css
+++ b/04-age-calculator/style.css
@@ -1,1 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+body{
+    font-family: "Inter", sans-serif;
+}
+
+nav {
+    width: 70%;
+    margin: 0 auto;
+    background-color: #F3F4F6;
+    height: 10vh;
+    padding: 0.3rem;
+    border-radius: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav > div {
+    border-radius: 0.5rem;
+    padding: 0.1rem 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
